log
Wed, May 14, 2025 10:45:10 AM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'matriz' set but not used [-Werror=unused-but-set-variable]
     int matriz[9][9] ;
         ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025 10:45:44 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
410ba1a
